# ENGR499

./: README.md  The Aerospace Corporation Robot Project Update 2_15_17.docx  hw.c
IMU/IMUDataProgram/: .~lock.data.csv#  CMakeLists.txt  Makefile  data.csv  data.txt  main.cpp  main2.cpp  main3.cpp
IMU/RTIMULib/: CMakeLists.txt
Sample/Bluetooth/: simplescan.c
airhockey-master/src/: ActiveCircle.py  AutoBot.py  AutoBotPy.py  Chrono.py  Controlelr Output.xlsx  Controller Output.xlsx  Disc.py  Gd01d01d01.txt  Gd01d025d01.txt  Gd025d01d01.txt  Gd05d01d01.txt  Gd075d01d01.txt  Gd1d01d01.txt  Gd1d1d1.txt  Goalpost.py  Mallet.py  Vector.py  const.py  controller output.txt  function.py  main.py  pid_controller.py
bluetooth/: .gitignore  Makefile  README.md  main.c
bluetooth/lib/: config.h  rfcomm.h  scan.h
bluetooth/src/: rfcomm-receive.c  rfcomm-send.c  scan.c
bluetooth_test/: Makefile  rfcomm-client.cpp  rfcomm-server.cpp
bluetooth_testing/: .gitignore  Makefile  simplescan.c
bluetooth_testing/rfcomm/: rfcomm-server.c
bluetooth_thread/: .gitignore  Makefile  README.md  beta.cpp  bluetooth.cpp  bluetooth.h  getMyBtAddr.sh  main.cpp
bluetooth_thread/lib/: config.h  prompt.h  rfcomm.h  scan.h
bluetooth_thread/src/: rfcomm-receive.cpp  rfcomm-send.cpp  scan.cpp
camera/: .gitignore  setup.sh
camera/libargus_testing/: Makefile_test  main.cpp
camera/oneShot/: CMakeLists.txt  README
camera/oneShot/cmake/: FindArgus.cmake  FindEGL.cmake
camera/usbcamera/: CMakeLists.txt  notes.txt  run.sh  usbcamera.cpp
camera_thread/: .gitignore  CMakeLists.txt  camera.cpp  camera.h  compile.sh  main.cpp  run.sh
fans/: CMakeLists.txt  fansController.cpp
jetsonTX1GPIO/: #exampleGPIOApp.cpp#  exampleGPIOApp  exampleGPIOApp.cpp
learning_bluetooth/: .gitignore  README.md
learning_bluetooth/rfcomm/: Makefile  README.md  rfcomm-client.c  rfcomm-server.c
learning_bluetooth/scan/: Makefile  simplescan.c
libargus_testing/: Makefile  README  Rules.mk  main.cpp
main/: .gitignore  CMakeLists.txt  README  camera.cpp  compile.sh  run.sh
main/include/: bluetooth.h  camera.h  fansController.h  imu.h  qr_camera.h  shape_camera.h
main/lib/RTIMULib/: CMakeLists.txt  RTIMULib.ini
main/scripts/: getMyBtAddr.sh
main/src/: bluetooth.cpp  camera.cpp  fansController.cpp  imu.cpp  main.cpp  qr_camera.cpp  shape_camera.cpp
qr_codes/: CMakeLists.txt  img_proc.cpp  qr_proc.cpp
qr_codes_thread/: CMakeLists.txt  FindZBar0.cmake  camera.cpp  camera.h  main.cpp
recognize_shapes/: .gitignore  CMakeLists.txt  run.sh  shape.cpp
